from datetime import UTC, datetime

from sqlalchemy import Boolean, DateTime, ForeignKey, Integer, String
from sqlalchemy.orm import Mapped, mapped_column, relationship

from app.core.database import Base


class Site(Base):
    __tablename__ = "sites"

    id: Mapped[int] = mapped_column(primary_key=True, index=True)
    user_id: Mapped[int] = mapped_column(ForeignKey("users.id"), nullable=False, index=True)
    url: Mapped[str] = mapped_column(String(512), nullable=False)
    name: Mapped[str] = mapped_column(String(255), nullable=False)
    is_active: Mapped[bool] = mapped_column(Boolean, default=True)
    created_at: Mapped[datetime] = mapped_column(
        DateTime(timezone=True), default=lambda: datetime.now(UTC)
    )

    rssi_client_id: Mapped[int | None] = mapped_column(
        ForeignKey("rssi_clients.id"), nullable=True, index=True
    )

    # SSL expiry alert tracking — threshold in days (30/14/7), reset when cert renewed
    ssl_alert_threshold: Mapped[int | None] = mapped_column(Integer, nullable=True)
    ssl_alert_sent_at: Mapped[datetime | None] = mapped_column(
        DateTime(timezone=True), nullable=True
    )

    user: Mapped["User"] = relationship()
    scans: Mapped[list["Scan"]] = relationship(
        back_populates="site", order_by="Scan.created_at.desc()"
    )
