import secrets
from datetime import UTC, datetime

from sqlalchemy import Boolean, DateTime, Integer, LargeBinary, String
from sqlalchemy.orm import Mapped, mapped_column, relationship

from app.core.database import Base


class User(Base):
    __tablename__ = "users"

    id: Mapped[int] = mapped_column(primary_key=True, index=True)
    email: Mapped[str] = mapped_column(String(255), unique=True, index=True, nullable=False)
    hashed_password: Mapped[str] = mapped_column(String(255), nullable=False)
    crypto_salt: Mapped[bytes] = mapped_column(
        LargeBinary(32), nullable=False, default=lambda: secrets.token_bytes(32)
    )
    is_active: Mapped[bool] = mapped_column(Boolean, default=True)
    failed_login_attempts: Mapped[int] = mapped_column(Integer, default=0, nullable=False)
    locked_until: Mapped[datetime | None] = mapped_column(DateTime(timezone=True), nullable=True)
    totp_secret: Mapped[str | None] = mapped_column(
        String(255), nullable=True
    )  # chiffré au repos (Fernet)
    totp_enabled: Mapped[bool] = mapped_column(Boolean, default=False, nullable=False)
    created_at: Mapped[datetime | None] = mapped_column(
        DateTime(timezone=True),
        nullable=True,
        default=lambda: datetime.now(UTC),
    )

    # Notification preferences
    notif_scan_done: Mapped[bool] = mapped_column(
        Boolean, default=True, nullable=False, server_default="true"
    )
    notif_scan_critical: Mapped[bool] = mapped_column(
        Boolean, default=True, nullable=False, server_default="true"
    )
    notif_url_scan_done: Mapped[bool] = mapped_column(
        Boolean, default=True, nullable=False, server_default="true"
    )
    notif_code_scan_done: Mapped[bool] = mapped_column(
        Boolean, default=True, nullable=False, server_default="true"
    )
    notif_ssl_expiry: Mapped[bool] = mapped_column(
        Boolean, default=True, nullable=False, server_default="true"
    )

    is_rssi_consultant: Mapped[bool] = mapped_column(
        Boolean, default=False, nullable=False, server_default="false"
    )

    display_name: Mapped[str | None] = mapped_column(String(100), nullable=True)
    company_name: Mapped[str | None] = mapped_column(String(150), nullable=True)
    phone: Mapped[str | None] = mapped_column(String(30), nullable=True)

    notifications: Mapped[list["Notification"]] = relationship(
        back_populates="user", cascade="all, delete-orphan"
    )  # type: ignore[name-defined]
    code_scans: Mapped[list["CodeScan"]] = relationship(
        back_populates="user", cascade="all, delete-orphan"
    )  # type: ignore[name-defined]
